# voice_process

./: CMakeLists.txt  main.c  test_config.c  test_rw.c
conf/: init.conf
include/: android_log.h  config.h  process.h
include/core/: a.out  cmfcc.h  compare.h  fft.h  mass_center.h  mel_bank.h  pre_process.h  tools.h
include/sndfile/: config.h  sfconfig.h  sfendian.h
include/vad/: vad.h
include/vad_snr/: vad.h
java_native/: VprocessJNI.java
java_native/jni/: VprocessJNI.java
jni/: Android.mk  Application.mk  VprocessJNI.c  VprocessJNI.h  jni.c  jni.cpp  jni_VprocessJNI.c  jni_VprocessJNI.h  log.h
src/: CMakeLists.txt  config.c  process.c
src/core/: .tools.c.swp  CMakeLists.txt  cmfcc.c  compare.c  fft.c  mass_center.c  mel_bank.c  pre_process.c  tools.c
src/other/: CMakeLists.txt  ttt
src/vad/: CMakeLists.txt  vad.c  vad_core.c  vad_core.h  vad_filterbank.c  vad_gmm.c  vad_sp.c  webrtc_vad.c
src/vad_snr/: vad.c
